--- a/requirements.txt
+++ b/requirements.txt
@@ -38,10 +38,12 @@ requests==2.13.0
 requests-oauthlib==0.8.0
 simplegeneric==0.8.1
 six==1.11.0
+slackclient==1.2.1
 tornado==5.0.2
 traitlets==4.3.2
 tweepy==3.6.0
 update-checker==0.16
 urllib3==1.22
 wcwidth==0.1.7
+websocket-client==0.48.0
 Werkzeug==0.14.1
